HelpMePlay | 1.0.10
	New Features:
		- Added a feature that quickly exits specified vehicles.
	General:
		- TOC bump for Patch 9.2.
		- The quest frame is no longer auto hidden if it's stuck. (A new approach will be considered for this problem.)
	UI:
		- Added a 'Disable All' fontstring for its check button.
	Dialog:
		- Dialog is now processed when Quests automation is disabled.
		- Added more dialogs from Zereth Mortis.
	Fixes:
		- Fixed dialogs that previously worked on Exile's Reach.
		- Fixed dialogs that previously worked in Draenor.
		- Fixed an issue with the Drafting Table automation in Gorgrond.
		- Fixed an issue preventing the addon from auto placing the Barracks in the Garrison under suspicious circumstances.
		- The addon should once again auto close the Architect table in the Garrison after placing the Barracks.
		- An error should no longer be thrown when opening the Command Table in the covenant sanctums.