@@ -40,8 +40,8 @@ if (locale == "enGB" or locale == "enUS") then
 	L["Do you really want to abandon all quests?"]								= "|cff00FFFF"..addonName.."|r\n".."Do you really want to abandon all quests?"
 	L["Yes"]																	= "Yes"
 	L["No"]																		= "No"
-	L["Box Of Many Things Purchase Text"]										= "Purchase the following talent: "
-	L["Box Of Many Things Not Enough Text"]										= "You need more |cff0070ddTower Knowledge|r! Amount Needed: "
+	L["Talent Purchase Text"]													= "Purchase the following talent: "
+	L["Talent Not Enough Currency Text"]										= "You need more currency! Amount Needed: "
 	L["Level Congrats Text"]													= "Congratulations on reaching level %s! Suggested talent: %s"
 	L["Automatic"]																= "Automatic"
 	L["Automatic (No Epic)"]													= "Automatic (No Epic)"
